<resources>
    <string name="app_name">淘妈咪</string>

    <string name="string_index">首页</string>
    <string name="string_convert_link">转链工具</string>
    <string name="string_mine">我的</string>
    <string name="string_search">搜索</string>
    <string name="string_promotion">推广位</string>
    <string name="string_link_convert">转链工具</string>
    <string name="string_modify_password">修改密码</string>
    <string name="string_newbie">新手教程</string>
    <string name="string_version_upgrade">版本升级</string>
    <string name="string_about_us">关于我们</string>
    <string name="string_toast_last_version">已经是最新版本了</string>
    <string name="string_waiting">请稍后...</string>
    <string name="string_come_back_later">稍后再来</string>
    <string name="string_act_now">立即认证</string>
    <string name="string_goto_login">去登录</string>
    <string name="string_accessing">您处于等待授权状态，请联系您的上级获取授权。</string>
    <string name="string_sorry">很抱歉...</string>
    <string name="string_input_your_act_code">请正确输入您的授权码</string>
    <string name="string_request_error">获取信息失败</string>
    <string name="string_act_error">授权失败</string>
    <string name="string_act_success">授权成功</string>
    <string name="string_goods_detail">商品详情</string>

    <!--<string name="string_url_domain">http://172.16.1.187:8080</string>-->
    <!--<string name="string_url_domain">http://58.218.207.186:8080</string>-->
    <!--<string name="string_url_domain">http://10.0.4.176:8080</string>-->
    <!--<string name="string_url_domain">http://192.168.0.111:8080</string>-->
    <string name="string_url_domain">http://taomami.net</string>
    <!--<string name="string_url_domain">http://101.200.56.221:8080</string>-->
    <string name="string_url_account_exist">/user/exist</string>
    <string name="string_url_account_register">/user/signup</string>
    <string name="string_url_account_login">/user/signin</string>
    <string name="string_url_account_lost">/user/lost</string>
    <string name="string_url_account_password">/user/password</string>
    <string name="string_url_account_updateReason">/user/updateReason</string>
    <string name="string_url_account_updateRhetoric">/user/updateRhetoric</string>
    <string name="string_url_account_logout">/user/signout</string>
    <string name="string_url_account_mine">/user/mine</string>
    <string name="string_url_account_reference">/user/referenceInfo</string>
    <string name="string_url_account_active">/user/active</string>
    <string name="string_url_meta_smsCode">/meta/smsCode</string>
    <string name="string_url_version_version">/version/version</string>

    <string name="string_url_tao_goods_query">/tao/query</string>
    <string name="string_url_tao_pwd">/tao/pwd</string>
    <string name="string_url_tao_convert">/tao/convert</string>
    <string name="string_url_ali_goods_search">/tao/search</string>
    <string name="string_url_ali_goods_convert">/tao/auction</string>
    <string name="string_url_ali_goods_brands">/tao/brands</string>
    <string name="string_url_ali_goods_create_brands">/tao/createBrands</string>

    <string name="string_url_readme">/webapp/widgets/static/readme-user.html</string>
    <string name="string_url_aboutus">/webapp/widgets/static/aboutus-user.html</string>
    <string name="string_url_introduction">/webapp/widgets/static/introduction-user.html</string>
    <string name="string_url_tutorial">/webapp/widgets/static/tutorial-user.html</string>

    <integer name="integer_app_type">1</integer>

</resources>
