<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <FrameLayout
        android:id="@+id/fl_act_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></FrameLayout>

    <RadioGroup
        android:id="@+id/rg_act_navigate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb_act_main_index"
            style="@style/radio_group_md_blue"
            android:text="@string/string_index"
            android:checked="true" />

        <RadioButton
            android:id="@+id/rb_act_main_convert_link"
            style="@style/radio_group_md_blue"
            android:clickable="true"
            android:text="@string/string_link_convert" />

        <RadioButton
            android:id="@+id/rb_act_main_mine"
            style="@style/radio_group_md_blue"
            android:clickable="true"
            android:text="@string/string_mine" />
    </RadioGroup>
</RelativeLayout>
