<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_act_access_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_waiting"
        android:textColor="#000000"
        android:textSize="18dp" />

    <ProgressBar
        android:id="@+id/pb_act_access_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_act_access_title"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/bt_act_access_goto_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_act_access_title"
        android:text="@string/string_goto_login"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_act_access_status_accessing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_act_access_title"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/et_act_access_act_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_input_your_act_code"
            android:maxLength="8" />

        <EditText
            android:id="@+id/et_act_access_act_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/string_input_account_password"
            android:maxLength="12" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_act_access_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_exit" />

            <Button
                android:id="@+id/bt_act_access_later"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_come_back_later" />

            <Button
                android:id="@+id/bt_act_access_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/string_act_now" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>